--- a/app/src/main/res/layout/activity_chnage_password.xml
+++ b/app/src/main/res/layout/activity_chnage_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".network_class.ChnagePassword">
+    tools:context=".view.activity.ChangePasswordActivity">
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
